--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="header_hint_normal">下拉刷新</string>
     <string name="header_hint_ready">放開更新</string>
     <string name="header_hint_loading">正在更新</string>
-    <string name="header_last_time">最後更新：</string>
+    <string name="header_last_time">最後更新：%1$s</string>
     <string name="header_hint_success">更新成功</string>
     <string name="header_hint_failed">更新失敗</string>
 
@@ -12,13 +12,8 @@
     <string name="footer_hint_ready">放開加載</string>
     <string name="footer_hint_loading">正在加載</string>
 
-    <string name="hint_updated_at">上次更新於%1$s前</string>
     <string name="hint_updated_just_now">剛剛更新</string>
     <string name="hint_time_error">時間錯誤</string>
 
-    <string name="minute">分鐘</string>
-    <string name="hour">小時</string>
-    <string name="day">天</string>
-    <string name="month">個月</string>
-    <string name="year">年</string>
+    <string name="today">今天</string>
 </resources>
